--- a/compile/style.scss
+++ b/compile/style.scss
@@ -3,10 +3,85 @@
 //     width: 100%;
 //     overflow: hidden;
 // }
-body {
-    background-color: #111c2d;
-    color: #ffffff;
+// body {
+    // background-color: #111c2d;
+    // color: #ffffff;
+// }
+// body -----------------------------------------------/
+.body-container {
+    max-width: 1100px;
+    width: 90%;
+    margin: 0 auto;
 }
+// loader pulser --------------------------------------/
+.content {
+    visibility: hidden;
+    height: 0;
+}
+.main-page-container {
+    visibility: hidden;
+    height: 0;
+}
+.loader-container {
+    display: block;
+}
+.spinner {
+    width: 100px;
+    height: 100px;
+    background: #21334e;
+    box-shadow: inset 0 0 4em #111c2d, 0 0 6em #2b405f;
+    border-radius: 50%;
+    position: relative;
+    margin: 50px;
+    display: inline-block;
+    &:after, &:before {
+        content: '';
+        display: block;
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+    }
+}
+    
+.pulser {
+    &:before, &:after {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-top: -50px;
+        margin-left: -50px;
+        background: rgb(31, 31, 141);
+        animation: pulse 3s linear infinite;
+        opacity: 0;
+    }
+      
+    &:after {
+        animation: pulse 2s linear 2.3s infinite;
+    }
+}
+      
+@keyframes pulse {
+    0% {
+        transform: scale(0);
+        opacity: 1;
+    }
+    100% {
+        transform: scale(1.3);
+        opacity: 0
+    }
+}
+
+@-webkit-keyframes pulse {
+    0% {
+        transform: scale(0);
+        opacity: 1;
+    }
+    100% {
+        transform: scale(1.3);
+        opacity: 0
+    }
+}
+
 // main orientation ------------------------------------/
 .slide {
     overflow: hidden;
@@ -14,7 +89,7 @@ body {
 .belt {
     width: 200%;
     display: flex;
-    transition: transform 1s ease-in-out;
+    transition: transform 600ms cubic-bezier(0, 1.1, 0.79,-0.62);
     perspective: 1000px;
 }
 .state {
@@ -28,6 +103,7 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    background-color: #111c2d;
 }
 .state-2 {
     background-color: rgb(243, 243, 243);
@@ -38,15 +114,21 @@ body {
 .slide.is-transitioned {
     .belt {
       transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+      -webkit-transform: translateX(-50%);
     }
     .state-1 {
       transform: scale(1) rotateY(-90deg);
+      -ms-transform: scale(1) rotateY(-90deg);
+      -webkit-transform: scale(1) rotateY(-90deg);
     }
 }
 // style intro page --------------------------------------/
 .slide {
     .main-page-container {
       position: absolute;
+      top: 50%;
+      margin-top: -100px;
     }
     .title {
         top: 30%;
@@ -86,13 +168,17 @@ body {
         p:nth-child(1) {
             padding-right: 5px;
         }
-        transition: all 100ms ease-in-out;
+        transition: all 100ms cubic-bezier(0, 1.69, 0.76, 1.74);
         &:hover {
-            transform: scale(1.05);
-            background-color: rgba(135, 177, 240, 0.8);
-            border: 1px solid rgba(135, 177, 240, 0.8);
+                transform: scale(1.05);
+                -ms-transform: scale(1.05);
+                -webkit-transform: scale(1.05);
+                background-color: rgba(135, 177, 240, 0.8);
+                border: 1px solid rgba(135, 177, 240, 0.8);
             & p:nth-child(2) {
-            transform: rotate(-90deg);
+                transform: rotate(-90deg);
+                -ms-transform: rotate(-90deg);
+                -webkit-transform: rotate(-90deg);
             }
         }
     }
@@ -170,18 +256,18 @@ nav {
             position: relative;
             cursor: pointer;
             .nav-main-text:hover {
-            font-size: 18px;
+                font-size: 18px;
             }
         }
         ul.social-list {
             ul li {
-            background-color: rgb(58, 59, 63);
-            &:last-child {
-                border-radius: 0 0 5px 5px;
-            }
-            &:active {
-                background-color: rgb(52, 53, 56);
-            }
+                background-color: rgb(58, 59, 63);
+                &:last-child {
+                    border-radius: 0 0 5px 5px;
+                }
+                &:active {
+                    background-color: rgb(52, 53, 56);
+                }
             }
         }
         ul.social-list li ul li {
@@ -201,12 +287,22 @@ nav {
                 animation-fill-mode: forwards;
                 @keyframes menu1 {
                     0% {
-                    opacity: 0;
-                    transform: rotateY(-90deg) translateY(30px);
+                        opacity: 0;
+                        transform: rotateY(-90deg) translateY(30px);
                     }
                     100% {
-                    opacity: 1;
-                    transform: rotateY(0deg) translateY(0px);
+                        opacity: 1;
+                        transform: rotateY(0deg) translateY(0px);
+                    }
+                }
+                @-webkit-keyframes menu1 {
+                    0% {
+                        opacity: 0;
+                        transform: rotateY(-90deg) translateY(30px);
+                    }
+                    100% {
+                        opacity: 1;
+                        transform: rotateY(0deg) translateY(0px);
                     }
                 }
             }
@@ -289,17 +385,25 @@ nav {
     .icon-list:hover {
         .list-bar:nth-child(1) {
             transform: translate(0, -3px);
+            -ms-transform: translate(0, -3px);
+            -webkit-transform: translate(0, -3px);
         }
         .list-bar:nth-child(3) {
             transform: translate(0, 3px);
+            -ms-transform: translate(0, 3px);
+            -webkit-transform: translate(0, 3px);
         }
     }
     .icon-list:active {
         .list-bar:nth-child(1) {
             transform: translate(0, 10px);
+            -ms-transform: translate(0, 10px);
+            -webkit-transform: translate(0, 10px);
         }
         .list-bar:nth-child(3) {
             transform: translate(0, -10px);
+            -ms-transform: translate(0, -10px);
+            -webkit-transform: translate(0, -10px);
         }
     }
 }
