--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -7,16 +7,17 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel='stylesheet' href='https://necolas.github.io/normalize.css/7.0.0/normalize.css'/>
         <link rel='stylesheet' href='/stylesheets/style.css'/>
-        <link href="https://fonts.googleapis.com/css?family=Fredoka+One|Cabin" rel="stylesheet"/>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka+One|Cabin:700"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" 
+        crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r83/three.min.js"></script>
         <script src="https://rawgit.com/mrdoob/three.js/master/examples/js/controls/OrbitControls.js"></script>
     </head>
     <body>
         {{{body}}}
     </body>
-
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" 
-    crossorigin="anonymous"></script>
+    <script type="text/javascript" src="javascripts/orbit-controls.js"></script>
     <script type="text/javascript" src="javascripts/index.js"></script>
 </html>
 
