--- a/compile/style.scss
+++ b/compile/style.scss
@@ -115,14 +115,14 @@ main orientation css
 }
 .slide.is-transitioned {
     .belt {
-      transform: translateX(-50%);
-      -ms-transform: translateX(-50%);
-      -webkit-transform: translateX(-50%);
+        transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+        -webkit-transform: translateX(-50%);
     }
     .state-1 {
-      transform: scale(1) rotateY(-90deg);
-      -ms-transform: scale(1) rotateY(-90deg);
-      -webkit-transform: scale(1) rotateY(-90deg);
+        transform: scale(1) rotateY(-90deg);
+        -ms-transform: scale(1) rotateY(-90deg);
+        -webkit-transform: scale(1) rotateY(-90deg);
     }
 }
 /********************************************
@@ -152,7 +152,7 @@ style intro page css
             color: rgb(88, 162, 197);
         }
     }
-    .button {
+    .main-button {
         margin: 0 auto;
         width: 280px;
         height: 50px;
@@ -539,93 +539,93 @@ portfolio css
 /********************************************
 sorting image css
 *********************************************/
-// .sort-image-container {
-//     padding: 2%;
-//     .tab {
-//         float: left;
-//         display: inline-block;
-//         width: 25%;
-//         text-align: center;
-//         .button {
-//             font-size: 18px;
-//             width: 80%;
-//             margin: 0 auto 7px;
-//             padding: 8px 0;
-//             border-radius: 4px;
-//             cursor: pointer;
-//             color: rgb(24, 24, 24);
-//             font-family: 'Cabin', 'Trebuchet MS', 'Tahoma';
-//             transition: transform 80ms cubic-bezier(0, 1.69, 0.76, 1.74);
-//             &:hover {
-//                 transform: scale(1.03);
-//                 -ms-transform: scale(1.03);
-//                 -webkit-transform: scale(1.03);
-//             }
-//         }
-//     }
-//     .sort-row {
-//         .sort {
-//             float: left;
-//             width: 50%;
-//             //display: none; /* Hide columns by default */
-//             animation-name: open;
-//             animation-duration: 300ms;
-//             animation-timing-function: ease-in-out;
-//             animation-fill-mode: forwards;
-//         }
-//         @keyframes open {
-//             0% {
-//                 opacity: 0;
-//                 transform: rotateX(-90deg);
-//             }
-//             100% {
-//                 opacity: 1;
-//                 transform: rotateX(0deg);
-//             }
-//         }
-//         @-webkit-keyframes open {
-//             0% {
-//                 opacity: 0;
-//                 transform: rotateX(-90deg);
-//             }
-//             100% {
-//                 opacity: 1;
-//                 transform: rotateX(0deg);
-//             }
-//         }
-//         .sort-content {
-//             background-color: white;
-//             padding: 10px;
-//         }
-//         &:after {
-//             content: "";
-//             display: table;
-//             clear: both;
-//         }
-//     }
-//     @media (max-width: 675px) {
-//         .sort {
-//             min-width: 100%;
-//         }
-//     }
-//     @media (max-width: 500px) {
-//         .tab {
-//             min-width: 50%;
-//         }
-//     }
-// }
+.sort-image-container {
+    padding: 2%;
+    .tab {
+        float: left;
+        display: inline-block;
+        width: 25%;
+        text-align: center;
+        .button {
+            font-size: 18px;
+            width: 80%;
+            margin: 0 auto 7px;
+            padding: 8px 0;
+            border-radius: 4px;
+            cursor: pointer;
+            color: rgb(24, 24, 24);
+            font-family: 'Cabin', 'Trebuchet MS', 'Tahoma';
+            transition: transform 80ms cubic-bezier(0, 1.69, 0.76, 1.74);
+            &:hover {
+                transform: scale(1.03);
+                -ms-transform: scale(1.03);
+                -webkit-transform: scale(1.03);
+            }
+        }
+    }
+    .sort-row {
+        .sort {
+            float: left;
+            width: 50%;
+            //display: none; /* Hide columns by default */
+            animation-name: open;
+            animation-duration: 300ms;
+            animation-timing-function: ease-in-out;
+            animation-fill-mode: forwards;
+        }
+        @keyframes open {
+            0% {
+                opacity: 0;
+                transform: rotateX(-90deg);
+            }
+            100% {
+                opacity: 1;
+                transform: rotateX(0deg);
+            }
+        }
+        @-webkit-keyframes open {
+            0% {
+                opacity: 0;
+                transform: rotateX(-90deg);
+            }
+            100% {
+                opacity: 1;
+                transform: rotateX(0deg);
+            }
+        }
+        .sort-content {
+            background-color: white;
+            padding: 10px;
+        }
+        &:after {
+            content: "";
+            display: table;
+            clear: both;
+        }
+    }
+    @media (max-width: 675px) {
+        .sort {
+            min-width: 100%;
+        }
+    }
+    @media (max-width: 500px) {
+        .tab {
+            min-width: 50%;
+        }
+    }
+}
 
-// .sort-selected {
-//     color: white !important;
-//     background-color: rgb(88, 162, 197) !important;
-//     transition: transform 100ms cubic-bezier(0, 1.69, 0.76, 1.74);
-//     &:hover {
-//         transform: scale(1.03);
-//         -ms-transform: scale(1.03);
-//         -webkit-transform: scale(1.03);
-//         background-color: rgb(88, 162, 197);
-//     }
-// }
+.sort-selected {
+    color: white !important;
+    background-color: rgb(88, 162, 197) !important;
+    transition: transform 100ms cubic-bezier(0, 1.69, 0.76, 1.74);
+    &:hover {
+        transform: scale(1.03);
+        -ms-transform: scale(1.03);
+        -webkit-transform: scale(1.03);
+        background-color: rgb(88, 162, 197);
+    }
+}
 
 /* The "show" class is added to the filtered elements */
 .show {
@@ -635,216 +635,212 @@ sorting image css
 /********************************************
 browser window image css
 *********************************************/
-// .browser-container {
-//     border: 3px solid #f1f1f1;
-//     border-top-left-radius: 4px;
-//     border-top-right-radius: 4px;
-//     margin: 5px 5px 10px;
-//     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-//     /* Container for columns and the top "toolbar" */
-//     .row {
-//         padding: 10px 10px 10px;
-//         background: #f1f1f1;
-//         border-top-left-radius: 4px;
-//         border-top-right-radius: 4px;
-//     }
-//     /* Create three unequal columns that floats next to each other */
-//     .column {
-//         float: left;
-//     }
-//     .left {
-//         min-width: 15%;
-//     }
-//     .right {
-//         width: 10%;
-//     }
-//     .middle {
-//         width: 75%;
-//     }
-//     /* Clear floats after the columns */
-//     .row:after {
-//         content: "";
-//         display: table;
-//         clear: both;
-//     }
-//     /* Three dots */
-//     .dot {
-//         margin-top: 1.5px;
-//         margin-left: 2px;
-//         height: 12px;
-//         width: 12px;
-//         background-color: #bbb;
-//         border-radius: 50%;
-//         display: inline-block;
-//     }
-//     /* Style the input field */
-//     .browser-input {
-//         font-family: 'Cabin', 'Trebuchet MS', 'Tahoma';
-//         width: 100%;
-//         border-radius: 3px;
-//         border: none;
-//         background-color: white;
-//         margin-top: -8px;
-//         height: 20px;
-//         line-height: 20px;
-//         color: #666;
-//         padding: 5px;
-//         transition: transform 100ms;
-//     }
-//     /* Three bars (hamburger menu) */
-//     .bar-list {
-//         margin-top: -4px;
-//     }
-//     .bar-list:hover {
-//         .bar:nth-child(1) {
-//             transform: translate(0px, -3px);
-//             -ms-transform: translate(0px, -3px);
-//             -webkit-transform: translate(0px, -3px);
-//         }
-//         .bar:nth-child(3) {
-//             transform: translate(0, 3px);
-//             -ms-transform: translate(0, 3px);
-//             -webkit-transform: translate(0, 3px);
-//         }
-//     }
-//     .bar-list:active {
-//         .bar:nth-child(1) {
-//             transform: translate(0, 10px);
-//             -ms-transform: translate(0, 10px);
-//             -webkit-transform: translate(0, 10px);
-//         }
-//         .bar:nth-child(3) {
-//             transform: translate(0, -10px);
-//             -ms-transform: translate(0, -10px);
-//             -webkit-transform: translate(0, -10px);
-//         }
-//     }
-//     .bar {
-//         width: 17px;
-//         height: 3px;
-//         background-color: #aaa;
-//         margin: 3px 0;
-//         display: block;
-//     }
-//     @media (max-width: 385px) {
-//         .left {
-//             min-width: 15%;
-//             margin-right: 7px;
-//         }
-//         .bar {
-//             display: none;
-//         }
-//     }
-// }
+.browser-container {
+    border: 3px solid #f1f1f1;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    margin: 5px 5px 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    /* Container for columns and the top "toolbar" */
+    .row {
+        padding: 10px 10px 10px;
+        background: #f1f1f1;
+        border-top-left-radius: 4px;
+        border-top-right-radius: 4px;
+    }
+    /* Create three unequal columns that floats next to each other */
+    .column {
+        float: left;
+    }
+    .left {
+        min-width: 15%;
+    }
+    .right {
+        width: 10%;
+    }
+    .middle {
+        width: 75%;
+    }
+    /* Clear floats after the columns */
+    .row:after {
+        content: "";
+        display: table;
+        clear: both;
+    }
+    /* Three dots */
+    .dot {
+        margin-top: 1.5px;
+        margin-left: 2px;
+        height: 12px;
+        width: 12px;
+        background-color: #bbb;
+        border-radius: 50%;
+        display: inline-block;
+    }
+    /* Style the input field */
+    .browser-input {
+        font-family: 'Cabin', 'Trebuchet MS', 'Tahoma';
+        width: 100%;
+        border-radius: 3px;
+        border: none;
+        background-color: white;
+        margin-top: -8px;
+        height: 20px;
+        line-height: 20px;
+        color: #666;
+        padding: 5px;
+        transition: transform 100ms;
+    }
+    /* Three bars (hamburger menu) */
+    .bar-list {
+        margin-top: -4px;
+    }
+    .bar-list:hover {
+        .bar:nth-child(1) {
+            transform: translate(0px, -3px);
+            -ms-transform: translate(0px, -3px);
+            -webkit-transform: translate(0px, -3px);
+        }
+        .bar:nth-child(3) {
+            transform: translate(0, 3px);
+            -ms-transform: translate(0, 3px);
+            -webkit-transform: translate(0, 3px);
+        }
+    }
+    .bar-list:active {
+        .bar:nth-child(1) {
+            transform: translate(0, 10px);
+            -ms-transform: translate(0, 10px);
+            -webkit-transform: translate(0, 10px);
+        }
+        .bar:nth-child(3) {
+            transform: translate(0, -10px);
+            -ms-transform: translate(0, -10px);
+            -webkit-transform: translate(0, -10px);
+        }
+    }
+    .bar {
+        width: 17px;
+        height: 3px;
+        background-color: #aaa;
+        margin: 3px 0;
+        display: block;
+    }
+    @media (max-width: 385px) {
+        .left {
+            min-width: 15%;
+            margin-right: 7px;
+        }
+        .bar {
+            display: none;
+        }
+    }
+}
 /********************************************
 image layout css
 *********************************************/
-// .image-container {
-//     position: relative;
-//     width: 100%;
-//     .image {
-//         display: block;
-//         width: 100%;
-//         height: auto;
-//     }
-//     .image-overlay {
-//         position: absolute;
-//         left: 0;
-//         right: 0;
-//         overflow: hidden;
-//         width: 100%;
-//         bottom: 100%;
-//         height:0;
-//         transition: .3s ease;
-//     }
-//     &:hover .image-overlay {
-//         animation-name: top-slide-in;
-//         animation-duration: 200ms;
-//         animation-timing-function: cubic-bezier(0, 1.69, 0.76, 0.5);
-//         animation-fill-mode: forwards;
-//     }
-//     @keyframes top-slide-in {
-//         0% {
-//             background-color: rgba(114, 114, 114, 0);
-//         }
-//         100% {
-//             background-color: rgba(114, 114, 114, 0.65);
-//             bottom: 0;
-//             height: 100%;
-//         }
-//     }
-//     @-webkit-keyframes top-slide-in {
-//         0% {
-//             background-color: rgba(114, 114, 114, 0);
-//         }
-//         100% {
-//             background-color: rgba(114, 114, 114, 0.65);
-//             bottom: 0;
-//             height: 100%;
-//         }
-//     }
-//     .text-container {
-//         white-space: nowrap; 
-//         color: white;
-//         font-size: 20px;
-//         position: absolute;
-//         overflow: hidden;
-//         top: 50%;
-//         left: 50%;
-//         text-align: center;
-//         transform: translate(-50%, -50%);
-//         -ms-transform: translate(-50%, -50%);
-//         -webkit-transform: translate(-50%, -50%);
-//         p {
-//             color: rgb(88, 162, 197);
-//         }
-//         p:nth-child(1) {
-//             font-family: 'Fredoka One', 'Arial Rounded MT Bold', 'Segoe UI';
-//             color: rgb(24, 24, 24);
-//             font-size: 1.15em;
-//             margin: 0;
-//         }
-//         p:nth-child(2) {
-//             font-family: 'Cabin', 'Trebuchet MS', 'Tahoma';
-//             margin-top: 0;
-//         }
-//         .more-button {
-//             margin: 0 auto;
-//             width: 200px;
-//             height: 50px;
-//             line-height: 50px;
-//             text-align: center;
-//             border: 2px solid rgb(88, 162, 197);
-//             background: transparent;
-//             cursor: pointer;
-//             transition: transform 100ms cubic-bezier(0, 1.69, 0.76, 1.74);
-//             a {
-//                 text-decoration: none;
-//                 color: rgb(24, 24, 24);
-//                 p {
-//                     font-family: 'Cabin', 'Trebuchet MS', 'Tahoma';
-//                     display: inline-block;
-//                     font-weight: bold;
-//                     padding-left: 5px;
-//                     margin: 0;
-//                 }
-//             }
-//             &:hover {
-//                 transform: scale(1.05);
-//                 -ms-transform: scale(1.05);
-//                 -webkit-transform: scale(1.05);
-//                 background-color: rgb(88, 162, 197);
-//                 a, p {
-//                     color: white;
-//                 }
-//             }
-//         }
-//     }
-// }
-
-
-
-
+.image-container {
+    position: relative;
+    width: 100%;
+    .image {
+        display: block;
+        width: 100%;
+        height: auto;
+    }
+    .image-overlay {
+        position: absolute;
+        left: 0;
+        right: 0;
+        overflow: hidden;
+        width: 100%;
+        bottom: 100%;
+        height:0;
+        transition: .3s ease;
+    }
+    &:hover .image-overlay {
+        animation-name: top-slide-in;
+        animation-duration: 200ms;
+        animation-timing-function: cubic-bezier(0, 1.69, 0.76, 0.5);
+        animation-fill-mode: forwards;
+    }
+    @keyframes top-slide-in {
+        0% {
+            background-color: rgba(114, 114, 114, 0);
+        }
+        100% {
+            background-color: rgba(114, 114, 114, 0.65);
+            bottom: 0;
+            height: 100%;
+        }
+    }
+    @-webkit-keyframes top-slide-in {
+        0% {
+            background-color: rgba(114, 114, 114, 0);
+        }
+        100% {
+            background-color: rgba(114, 114, 114, 0.65);
+            bottom: 0;
+            height: 100%;
+        }
+    }
+    .text-container {
+        white-space: nowrap; 
+        color: white;
+        font-size: 20px;
+        position: absolute;
+        overflow: hidden;
+        top: 50%;
+        left: 50%;
+        text-align: center;
+        transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        -webkit-transform: translate(-50%, -50%);
+        p {
+            color: rgb(88, 162, 197);
+        }
+        p:nth-child(1) {
+            font-family: 'Fredoka One', 'Arial Rounded MT Bold', 'Segoe UI';
+            color: rgb(24, 24, 24);
+            font-size: 1.15em;
+            margin: 0;
+        }
+        p:nth-child(2) {
+            font-family: 'Cabin', 'Trebuchet MS', 'Tahoma';
+            margin-top: 0;
+        }
+        .more-button {
+            margin: 0 auto;
+            width: 200px;
+            height: 50px;
+            line-height: 50px;
+            text-align: center;
+            border: 2px solid rgb(88, 162, 197);
+            background: transparent;
+            cursor: pointer;
+            transition: transform 100ms cubic-bezier(0, 1.69, 0.76, 1.74);
+            a {
+                text-decoration: none;
+                color: rgb(24, 24, 24);
+                p {
+                    font-family: 'Cabin', 'Trebuchet MS', 'Tahoma';
+                    display: inline-block;
+                    font-weight: bold;
+                    padding-left: 5px;
+                    margin: 0;
+                }
+            }
+            &:hover {
+                transform: scale(1.05);
+                -ms-transform: scale(1.05);
+                -webkit-transform: scale(1.05);
+                background-color: rgb(88, 162, 197);
+                a, p {
+                    color: white;
+                }
+            }
+        }
+    }
+}
 
 /********************************************
 contact form css
