--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -123,7 +123,7 @@ style intro page css
     padding-left: 6px;
     font-size: 1.55em;
     color: #58a2c5; }
-.slide .button {
+.slide .main-button {
   margin: 0 auto;
   width: 280px;
   height: 50px;
@@ -134,21 +134,21 @@ style intro page css
   background: transparent;
   cursor: pointer;
   transition: all 100ms cubic-bezier(0, 1.69, 0.76, 1.74); }
-  .slide .button p {
+  .slide .main-button p {
     display: inline-block;
     margin: 0;
     padding: 0;
     font-family: 'Fredoka One', 'Arial Rounded MT Bold', 'Segoe UI';
     color: #f3f3f3; }
-  .slide .button p:nth-child(1) {
+  .slide .main-button p:nth-child(1) {
     padding-right: 5px; }
-  .slide .button:hover {
+  .slide .main-button:hover {
     transform: scale(1.05);
     -ms-transform: scale(1.05);
     -webkit-transform: scale(1.05);
     background-color: rgba(135, 177, 240, 0.8);
     border: 1px solid rgba(135, 177, 240, 0.8); }
-    .slide .button:hover p:nth-child(2) {
+    .slide .main-button:hover p:nth-child(2) {
       transform: rotate(-90deg);
       -ms-transform: rotate(-90deg);
       -webkit-transform: rotate(-90deg); }
@@ -427,6 +427,72 @@ portfolio css
 /********************************************
 sorting image css
 *********************************************/
+.sort-image-container {
+  padding: 2%; }
+  .sort-image-container .tab {
+    float: left;
+    display: inline-block;
+    width: 25%;
+    text-align: center; }
+    .sort-image-container .tab .button {
+      font-size: 18px;
+      width: 80%;
+      margin: 0 auto 7px;
+      padding: 8px 0;
+      border-radius: 4px;
+      cursor: pointer;
+      color: #181818;
+      font-family: 'Cabin', 'Trebuchet MS', 'Tahoma';
+      transition: transform 80ms cubic-bezier(0, 1.69, 0.76, 1.74); }
+      .sort-image-container .tab .button:hover {
+        transform: scale(1.03);
+        -ms-transform: scale(1.03);
+        -webkit-transform: scale(1.03); }
+  .sort-image-container .sort-row .sort {
+    float: left;
+    width: 50%;
+    animation-name: open;
+    animation-duration: 300ms;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode: forwards; }
+@keyframes open {
+  0% {
+    opacity: 0;
+    transform: rotateX(-90deg); }
+  100% {
+    opacity: 1;
+    transform: rotateX(0deg); } }
+@-webkit-keyframes open {
+  0% {
+    opacity: 0;
+    transform: rotateX(-90deg); }
+  100% {
+    opacity: 1;
+    transform: rotateX(0deg); } }
+  .sort-image-container .sort-row .sort-content {
+    background-color: white;
+    padding: 10px; }
+  .sort-image-container .sort-row:after {
+    content: "";
+    display: table;
+    clear: both; }
+  @media (max-width: 675px) {
+    .sort-image-container .sort {
+      min-width: 100%; } }
+  @media (max-width: 500px) {
+    .sort-image-container .tab {
+      min-width: 50%; } }
+
+.sort-selected {
+  color: white !important;
+  background-color: #58a2c5 !important;
+  transition: transform 100ms cubic-bezier(0, 1.69, 0.76, 1.74); }
+  .sort-selected:hover {
+    transform: scale(1.03);
+    -ms-transform: scale(1.03);
+    -webkit-transform: scale(1.03);
+    background-color: #58a2c5; }
+
 /* The "show" class is added to the filtered elements */
 .show {
   display: block; }
@@ -434,9 +500,173 @@ sorting image css
 /********************************************
 browser window image css
 *********************************************/
+.browser-container {
+  border: 3px solid #f1f1f1;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  margin: 5px 5px 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  /* Container for columns and the top "toolbar" */
+  /* Create three unequal columns that floats next to each other */
+  /* Clear floats after the columns */
+  /* Three dots */
+  /* Style the input field */
+  /* Three bars (hamburger menu) */ }
+  .browser-container .row {
+    padding: 10px 10px 10px;
+    background: #f1f1f1;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px; }
+  .browser-container .column {
+    float: left; }
+  .browser-container .left {
+    min-width: 15%; }
+  .browser-container .right {
+    width: 10%; }
+  .browser-container .middle {
+    width: 75%; }
+  .browser-container .row:after {
+    content: "";
+    display: table;
+    clear: both; }
+  .browser-container .dot {
+    margin-top: 1.5px;
+    margin-left: 2px;
+    height: 12px;
+    width: 12px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block; }
+  .browser-container .browser-input {
+    font-family: 'Cabin', 'Trebuchet MS', 'Tahoma';
+    width: 100%;
+    border-radius: 3px;
+    border: none;
+    background-color: white;
+    margin-top: -8px;
+    height: 20px;
+    line-height: 20px;
+    color: #666;
+    padding: 5px;
+    transition: transform 100ms; }
+  .browser-container .bar-list {
+    margin-top: -4px; }
+  .browser-container .bar-list:hover .bar:nth-child(1) {
+    transform: translate(0px, -3px);
+    -ms-transform: translate(0px, -3px);
+    -webkit-transform: translate(0px, -3px); }
+  .browser-container .bar-list:hover .bar:nth-child(3) {
+    transform: translate(0, 3px);
+    -ms-transform: translate(0, 3px);
+    -webkit-transform: translate(0, 3px); }
+  .browser-container .bar-list:active .bar:nth-child(1) {
+    transform: translate(0, 10px);
+    -ms-transform: translate(0, 10px);
+    -webkit-transform: translate(0, 10px); }
+  .browser-container .bar-list:active .bar:nth-child(3) {
+    transform: translate(0, -10px);
+    -ms-transform: translate(0, -10px);
+    -webkit-transform: translate(0, -10px); }
+  .browser-container .bar {
+    width: 17px;
+    height: 3px;
+    background-color: #aaa;
+    margin: 3px 0;
+    display: block; }
+  @media (max-width: 385px) {
+    .browser-container .left {
+      min-width: 15%;
+      margin-right: 7px; }
+    .browser-container .bar {
+      display: none; } }
+
 /********************************************
 image layout css
 *********************************************/
+.image-container {
+  position: relative;
+  width: 100%; }
+  .image-container .image {
+    display: block;
+    width: 100%;
+    height: auto; }
+  .image-container .image-overlay {
+    position: absolute;
+    left: 0;
+    right: 0;
+    overflow: hidden;
+    width: 100%;
+    bottom: 100%;
+    height: 0;
+    transition: .3s ease; }
+  .image-container:hover .image-overlay {
+    animation-name: top-slide-in;
+    animation-duration: 200ms;
+    animation-timing-function: cubic-bezier(0, 1.69, 0.76, 0.5);
+    animation-fill-mode: forwards; }
+@keyframes top-slide-in {
+  0% {
+    background-color: rgba(114, 114, 114, 0); }
+  100% {
+    background-color: rgba(114, 114, 114, 0.65);
+    bottom: 0;
+    height: 100%; } }
+@-webkit-keyframes top-slide-in {
+  0% {
+    background-color: rgba(114, 114, 114, 0); }
+  100% {
+    background-color: rgba(114, 114, 114, 0.65);
+    bottom: 0;
+    height: 100%; } }
+  .image-container .text-container {
+    white-space: nowrap;
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    overflow: hidden;
+    top: 50%;
+    left: 50%;
+    text-align: center;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%); }
+    .image-container .text-container p {
+      color: #58a2c5; }
+    .image-container .text-container p:nth-child(1) {
+      font-family: 'Fredoka One', 'Arial Rounded MT Bold', 'Segoe UI';
+      color: #181818;
+      font-size: 1.15em;
+      margin: 0; }
+    .image-container .text-container p:nth-child(2) {
+      font-family: 'Cabin', 'Trebuchet MS', 'Tahoma';
+      margin-top: 0; }
+    .image-container .text-container .more-button {
+      margin: 0 auto;
+      width: 200px;
+      height: 50px;
+      line-height: 50px;
+      text-align: center;
+      border: 2px solid #58a2c5;
+      background: transparent;
+      cursor: pointer;
+      transition: transform 100ms cubic-bezier(0, 1.69, 0.76, 1.74); }
+      .image-container .text-container .more-button a {
+        text-decoration: none;
+        color: #181818; }
+        .image-container .text-container .more-button a p {
+          font-family: 'Cabin', 'Trebuchet MS', 'Tahoma';
+          display: inline-block;
+          font-weight: bold;
+          padding-left: 5px;
+          margin: 0; }
+      .image-container .text-container .more-button:hover {
+        transform: scale(1.05);
+        -ms-transform: scale(1.05);
+        -webkit-transform: scale(1.05);
+        background-color: #58a2c5; }
+        .image-container .text-container .more-button:hover a, .image-container .text-container .more-button:hover p {
+          color: white; }
+
 /********************************************
 contact form css
 *********************************************/
