--- a/views/portfolio/main.hbs
+++ b/views/portfolio/main.hbs
@@ -14,7 +14,7 @@
                         <h2>Hello, I'm </h2><span>Lue Hang. <br/></span>
                         <h2>I'm a web and software <br/> developer.</h2>
                     </div>
-                    <div class="button"> 
+                    <div class="main-button"> 
                         <p>MORE </p>
                         <p>&#11015;</p>
                     </div>
@@ -56,7 +56,7 @@
                 <section class="body-container" id="about">
                     <h1>ABOUT</h1>
                     <div class="line-separation"></div>
-                    <div class="card"><img src="https://services-media.propertylogic.net/website/1453828797/default_profile.jpg" alt="John" style="width:100%"/>
+                    <div class="card"><img src="img/lue_hang.jpg" alt="Lue Hang" style="width:100%"/>
                         <div class="profile-container">
                             <h1>Lue Hang</h1>
                             <p class="title">Full-Stack Web and Software Developer, Fitness Trainer</p>
@@ -69,6 +69,7 @@
                     <h1>PROJECTS</h1>
                     <div class="line-separation"></div>
                     <div id="app"></div>
+                    <script type="text/javascript" src="bundle.js"></script>
                 </section> <!-- end portfolio section -->
                 <div id="contact">
                     <section class="body-container">
