--- a/views/portfolio/main.hbs
+++ b/views/portfolio/main.hbs
@@ -91,7 +91,7 @@
                                             </div>
                                             <div class="modal-body modal-body-step-2">
                                                 <div class="title">Step 2</div>
-                                                <div class="description">Message to send.</div>
+                                                <div class="description">Write your message.</div>
                                                 <div class="text-center">
                                                 <textarea placeholder="Message" rows="5" autocapitalize="autocapitalize" spellcheck="spellcheck"></textarea>
                                                 <div class="button">Send Message</div>
