--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -364,7 +364,7 @@ profile card css
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   min-width: 300px;
-  padding: 0;
+  padding: 10px;
   margin: auto;
   text-align: center; }
   .card img {
@@ -428,7 +428,8 @@ portfolio css
 sorting image css
 *********************************************/
 .sort-image-container {
-  padding: 2%; }
+  padding: 0;
+  margin: 0; }
   .sort-image-container .tab {
     float: left;
     display: inline-block;
@@ -450,7 +451,7 @@ sorting image css
         -webkit-transform: scale(1.03); }
   .sort-image-container .sort-row .sort {
     float: left;
-    width: 50%;
+    width: 33%;
     animation-name: open;
     animation-duration: 300ms;
     animation-timing-function: ease-in-out;
@@ -476,6 +477,9 @@ sorting image css
     content: "";
     display: table;
     clear: both; }
+  @media (max-width: 1000px) {
+    .sort-image-container .sort {
+      min-width: 50%; } }
   @media (max-width: 675px) {
     .sort-image-container .sort {
       min-width: 100%; } }
@@ -513,18 +517,20 @@ browser window image css
   /* Style the input field */
   /* Three bars (hamburger menu) */ }
   .browser-container .row {
-    padding: 10px 10px 10px;
+    padding: 10px 5px;
     background: #f1f1f1;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px; }
   .browser-container .column {
     float: left; }
   .browser-container .left {
-    min-width: 15%; }
+    min-width: 15%;
+    margin-right: 1%; }
   .browser-container .right {
-    width: 10%; }
+    width: 10%;
+    margin-left: 1%; }
   .browser-container .middle {
-    width: 75%; }
+    width: 71%; }
   .browser-container .row:after {
     content: "";
     display: table;
@@ -573,12 +579,6 @@ browser window image css
     background-color: #aaa;
     margin: 3px 0;
     display: block; }
-  @media (max-width: 385px) {
-    .browser-container .left {
-      min-width: 15%;
-      margin-right: 7px; }
-    .browser-container .bar {
-      display: none; } }
 
 /********************************************
 image layout css
